--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ httptools==0.2.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
-libvirt-python==8.1.0
+#libvirt-python==8.1.0
 mariadb==1.0.9
 MarkupSafe==2.0.1
 orjson==3.6.5
