--- a/ambiente/pyvenv.cfg
+++ b/ambiente/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = /usr/bin
 include-system-site-packages = false
-version = 3.12.5
+version = 3.12.7
 executable = /usr/bin/python3.12
-command = /usr/bin/python -m venv /home/paiva/sandbox/dcp/ambiente
+command = /usr/bin/python -m venv /opt/dcp/ambiente
