--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,10 @@ paramiko==3.5.0
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyghmi==1.5.72
 PyNaCl==1.5.0
+python-dateutil==2.9.0.post0
+six==1.16.0
 sniffio==1.3.1
 starlette==0.38.6
 typing_extensions==4.12.2
