--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.6.0
+APScheduler==3.10.4
 bcrypt==4.2.0
 cffi==1.17.1
 click==8.1.7
@@ -16,8 +17,10 @@ pydantic_core==2.23.4
 pyghmi==1.5.72
 PyNaCl==1.5.0
 python-dateutil==2.9.0.post0
+pytz==2024.2
 six==1.16.0
 sniffio==1.3.1
 starlette==0.38.6
 typing_extensions==4.12.2
+tzlocal==5.2
 uvicorn==0.31.1
