colocado token no conexao.py

--- a/ambiente/pyvenv.cfg
+++ b/ambiente/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.12.7
 executable = /usr/bin/python3.12
-command = /usr/bin/python -m venv /home/paiva/sandbox/dcp/ambiente
+command = /usr/bin/python -m venv /opt/dcp/ambiente
