--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,28 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+contourpy==1.3.1
 cryptography==43.0.1
+cycler==0.12.1
 fastapi==0.115.0
+fonttools==4.55.2
 h11==0.14.0
 idna==3.10
+kiwisolver==1.4.7
+matplotlib==3.9.3
 mysql-connector-python==9.0.0
 mysqlclient==2.2.4
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
 paramiko==3.5.0
+pillow==11.0.0
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyghmi==1.5.72
 PyNaCl==1.5.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
@@ -26,6 +36,7 @@ sniffio==1.3.1
 starlette==0.38.6
 tabulate==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.2
 tzlocal==5.2
 urllib3==2.2.3
 uvicorn==0.31.1
